# AutoMathReasoner

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  openenv.yaml  pyproject.toml  requirements.txt
config/: openenv.yaml
env/: __init__.py  environment.py  generator.py  models.py  rewards.py  verifier.py
server/: __init__.py  app.py
tests/: test_env.py  test_integration.py
train/: colab_train.py  sft_warm_start.py  train_grpo.py
