# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-AutoMathReasoner"
version = "0.1.0"
description = "Automathreasoner environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    # "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "openenv-core[core]>=0.2.2",
    "sympy>=1.12",
    "scipy>=1.10.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m AutoMathReasoner.server.app
server = "AutoMathReasoner.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["AutoMathReasoner", "AutoMathReasoner.server", "AutoMathReasoner.env"]
package-dir = { "AutoMathReasoner" = ".", "AutoMathReasoner.server" = "server", "AutoMathReasoner.env" = "env" }